--- a/portfolio/src/components/Bio.css
+++ b/portfolio/src/components/Bio.css
@@ -1,5 +1,6 @@
 #bio {
     margin-top: 200px;
+    padding-top: 50px;
 }
 
 .content {
@@ -19,7 +20,32 @@
     padding-top: 30px;
     font-size: 1.8rem;
     line-height: 1.7;
-    width: 80%;
     margin: 0 auto;
+}
+
+.stuff-i-do {
+    margin-bottom: 500px;
+    padding-top: 20px;
+}
+
+.scroller {
+    display: block;
+    width: 10%;
+    margin: 10px auto;
+    background: rgb(30, 30, 30);
+    color: white;
+    font-size: 3rem;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+}
+
+.scroll-to-proj {
+    margin-top: 50px;
+    margin-bottom: 500px;
+}
+
+.scroll-to-bio {
+    margin-bottom: -30px;
 }
 
