--- a/portfolio/src/components/Bio.css
+++ b/portfolio/src/components/Bio.css
@@ -40,6 +40,11 @@
     border-radius: 50px;
 }
 
+.scroller:hover {
+    cursor: pointer;
+    background: black;
+}
+
 .scroll-to-proj {
     margin-top: 50px;
     margin-bottom: 500px;
