--- a/portfolio/src/components/Bio.css
+++ b/portfolio/src/components/Bio.css
@@ -38,12 +38,12 @@
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    transition: all 1s;
+    transition: all 0.5s;
 }
 
 .scroller:hover {
     cursor: pointer;
-    background: black;
+    transform: scale(1.25);
 }
 
 .scroll-to-proj {
